background, aligning issues resolved

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -119,9 +119,8 @@ main {
   height: px2vw(600px);
   flex-shrink: 0;
   border-radius: 50%;
-  background-color: rgba(207, 218, 227, 1);
-  opacity: 0.5;
-  filter: blur(px2vw(30px));
+  background-color: #cfdae3;
+  filter: blur(px2vw(60px));
   z-index: -1;
 }
 
@@ -327,8 +326,7 @@ main {
   height: px2vw(720px);
   border-radius: 50%;
   background-color: white;
-  opacity: 0.5;
-  filter: blur(px2vw(20px));
+  filter: blur(px2vw(60px));
   z-index: -1;
 }
 .service_content_wraper {
@@ -408,7 +406,7 @@ main {
   margin: px2vw(100px) 0 0 0;
   grid-template-columns: 1fr 4fr;
   column-gap: px2vw(100px);
-  align-items: top;
+  align-items: center;
 
   .about_circle {
     grid-column: 1/2;
@@ -428,22 +426,19 @@ main {
     height: px2vw(800px);
     flex-shrink: 0;
     border-radius: 50%;
-    background-color: rgba(207, 218, 227, 1);
-    opacity: 0.6;
-    filter: blur(px2vw(40px));
+    background-color: #cfdae3;
+    filter: blur(px2vw(80px));
     z-index: -1;
   }
   .about_image {
     grid-column: 1/2;
     width: px2vw(320px);
-
     overflow: hidden;
   }
   .about_text {
     width: px2vw(960px);
     grid-column: 2/3;
     @include BrandonMedium(px2vw(28px));
-
     line-height: px2vw(40px);
     color: $secondBlack;
     margin-bottom: px2vw(120px);
@@ -471,13 +466,12 @@ main {
     @include BrandonRegular(px2vw(24px));
     margin-top: px2vw(20px);
   }
-  .about_dottedLine {
-    grid-column: 2/3;
-    width: 100%;
-    margin: px2vw(100px) 0 px2vw(100px) 0;
-  }
 }
-
+.about_dottedLine {
+  grid-column: 2/3;
+  width: 100%;
+  margin: px2vw(100px) 0 px2vw(100px) 0;
+}
 //section4
 
 .testimonials {
@@ -692,6 +686,7 @@ main {
           width: px2vw(347px);
           margin: auto;
           @include BrandonRegular(px2vw(24px));
+          color: #0e1822;
         }
         .arrow_box {
           display: flex;
@@ -739,6 +734,7 @@ main {
   .footer_text {
     display: flex;
     gap: px2vw(60px);
+    opacity: 0.5;
     .footer_text1 {
       @include BrandonMedium(px2vw(16px));
     }
